--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             name="description"
             content="Boardgame Score Calculator"
         />
+        <link href="favicon.png" rel="icon" type="image/png" />
         <title>Boardgame Score Calculator</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet"/>
         <style>
